# XZerver

./: .flask.env  .gitignore  database.py  pyproject.toml  readme.md
XZerver/: config.py  filters.py  forms.py  server_start.py
XZerver/server/auth/: forms.py  middlewares.py  models.py  routes.py
XZerver/server/auth/static/css/: admin_panel.css  list_form.css  list_tables.css  login.css
XZerver/server/auth/static/js/: list_tables.js
XZerver/server/auth/templates/: login.html
XZerver/server/auth/templates/admin/: admin_panel.html  list_form.html  list_tables.html
XZerver/server/home/: routes.py
XZerver/server/home/static/css/: homepage.css
XZerver/server/home/templates/: home.html
XZerver/server/xdrive/: admin.py  forms.py  models.py  routes.py  xdrive.py
XZerver/server/xdrive/static/css/: app.css
XZerver/server/xdrive/static/js/: app.js
XZerver/server/xdrive/templates/: app.html
XZerver/server/xssh/: routes.py  socketio_ssh_rooms.py
XZerver/server/xssh/static/css/: ssh.css
XZerver/server/xssh/static/js/: ssh.js
XZerver/server/xssh/templates/: ssh_client.html
XZerver/static_global/css/: global.css
XZerver/static_global/js/: notify.js
XZerver/templates/: base.html
docs/: DD - XDrive.md  DD - XSSH.md  DD - XZerver.md  Design Document.md  Notes.md
tests/: conftest.py  data.sql  test_auth.py  test_factory.py
